Added SONAR qube to microservices, k8s ingress improvements
Former-commit-id: ce6c2ee73250e2e08c7376a9827168fef0d8512d
Former-commit-id: d4783595c9705c5c52e2ff2a7e165117a787d542 [formerly cc29b16b1f75d57a1a6a46022922eb273e2eb162]
Former-commit-id: 9ce1e025611156820f2dbd879ef32b8654803c68

--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -37,6 +37,12 @@ services:
     depends_on:
       - pgsql
 
+  dashboard-app:
+    image: restaurant/dashboard
+    build:
+      context: ./web/web.admin/dashboard
+      dockerfile: Dockerfile
+      
   pgsql:
     image: postgres:alpine
     volumes: 
