--- a/src/Server/services/order.api/src/main/resources/application.properties
+++ b/src/Server/services/order.api/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.password=
 
 spring.application.name=order-service
 jwt.apiAudience=order-api
+
+management.endpoints.web.base-path=
+management.endpoint.health.show-details=always
+
+server.use-forward-headers=true
