--- a/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
+++ b/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
@@ -23,9 +23,14 @@ zuul:
     basket:
       path: /basket/**
       url: ${BASKET_URL:http://localhost:5200}
+    dashboard:
+      path: /dashboard/**
+      sensitiveHeaders:
+      url: ${DASHBOARD_URL:http://localhost:4200}
+
   host:
-        connect-timeout-millis: 60000
-        socket-timeout-millis: 60000
+    connect-timeout-millis: 60000
+    socket-timeout-millis: 60000
 
 management:
   endpoints:
