--- a/src/Server/services/menu.api/Menu.API.UnitTests/Menu.API.UnitTests.csproj
+++ b/src/Server/services/menu.api/Menu.API.UnitTests/Menu.API.UnitTests.csproj
@@ -5,6 +5,10 @@
     <DebugType>Portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.6.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
