--- a/src/Server/services/menu.api/Menu.API/Menu.API.csproj
+++ b/src/Server/services/menu.api/Menu.API/Menu.API.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <ProjectGuid>{0653635a-c13b-4622-965c-aa086527cb52}</ProjectGuid>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.103.2" />
     <PackageReference Include="Pivotal.Discovery.ClientCore" Version="2.2.0-rc2" />
