k8s deploy issues fixed
Former-commit-id: 4b22066911bddb9ccd7f087d911421d1e625c068
Former-commit-id: cb7f9fb13909fd478ffddc666988df1f5f1e64a1 [formerly b9e65a99129ffa564c943dad5478165d7c4b123d]
Former-commit-id: 35a88b5052275d14c98c3677c03d808fdf7cc50d

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -20,6 +20,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - ExternalIdentityUrl=http://localhost:8080/identity
+      - BASE_PATH=/basket
   
   pgsql:
     environment:
