--- a/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -48,9 +48,9 @@
     <AndroidSupportedAbis>x86</AndroidSupportedAbis>
   </PropertyGroup>
   <ItemGroup>
-      <Reference Include="ActionItemBadge, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\Libs\ActionItemBadge.dll</HintPath>
-      </Reference>
+    <Reference Include="ActionItemBadge, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\Libs\ActionItemBadge.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
@@ -67,7 +67,7 @@
     <Compile Include="Effects\MaxLinesEffect.cs" />
     <Compile Include="LoggingService.cs" />
     <Compile Include="Providers\BadgeMenuItemProvider.cs" />
-    <Compile Include="Providers\BarProvider.cs" />
+    <Compile Include="Providers\ActionBarFacade.cs" />
     <Compile Include="Providers\StatusBarProvider.cs" />
     <Compile Include="Renderers\CustomNavigationPageRenderer.cs" />
     <Compile Include="Renderers\CustomSearchBarRenderer.cs" />
