--- a/src/Server/k8s/ingress.yml
+++ b/src/Server/k8s/ingress.yml
@@ -8,7 +8,8 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "false"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Forwarded-Prefix: $location_path";
 spec:
   rules:
   - host:
