gitlab.ci fixes
Former-commit-id: a39359c8bfdeedb85c4fea40de93859a330debea
Former-commit-id: 04ad013c32af1cedc46aae8358f32f37ff0e2c04 [formerly c956d1bde27167af83c4767967aaff8f34f61fbd]
Former-commit-id: 458ffaed4a0ad7a4aebd980d7737489790f481ee

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ before_script:
     
 build:basket_api:
   before_script:
-    - sh services/basket.api/install_ci_dependencies.sh
+    - sh src/Server/services/basket.api/install_ci_dependencies.sh
   image: golang:1.11-alpine
   stage: build & test
   script:
