gitlab.ci fixes
Former-commit-id: 7ddb2c2a8ba437869d45615a1dd10cd32352d75f
Former-commit-id: 14f012f5e68c2c2cb89c0adf5dd406a55d1c6e1b [formerly b4df2a913b2d5f978a4415e871ac61a5e3b03e4f]
Former-commit-id: 54dd1b84af45adb248f077a7d2a556ef6fcb57ce

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ variables:
     
 
 before_script:
+  - apk add --no-cache curl
   - export GRADLE_USER_HOME=$(pwd)/.gradle
   - export NUGET_PACKAGES=$(pwd)/.nuget
   - export GOPATH=$(pwd)/go
@@ -62,7 +63,6 @@ build:order_api:
     - ci/update_build_badge.sh `cat order_status.txt` order_api
   cache:
     key: gradle-cache
-    policy: pull
     paths:
      - .gradle/wrapper
      - .gradle/caches
@@ -121,7 +121,7 @@ build:menu_api:
     paths:
       - public/badges/**
 
-finalize:build:
+pages:
   stage: finalize build
   script:
     - echo "Deploying badges"
