gitlab.ci fixes
Former-commit-id: 9f4df98e56f6334d20fba12687cede855a153db3
Former-commit-id: 0dac125020d14e9c6431d2d4ba0138ec3b73008c [formerly 99d854b3c6900dcc40fb6e606014a2fcd9656f44]
Former-commit-id: 70454b538b9f0b1c9e0e33da14005f8e9fce51c2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,7 @@ build:menu_api:
       - public/badges/**
 
 pages:
+  before_script: []
   stage: finalize build
   script:
     - echo "Deploying badges"
