gitlab.ci fixes
Former-commit-id: 84b0240619a3f1666280113404cfccd095e0808d
Former-commit-id: e1dae6bee1eb2a47705c791cfb9e6bf0b2f0b3c5 [formerly 0f5bd884dcd18c423fb0e696af68315a7739c6fa]
Former-commit-id: 0f6c570f25109a3e5257701a94d657acb217f44b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ build:basket_api:
       - src/Server/services/basket.api/**/*
   artifacts:
     paths:
-      - public/badges/**
+      - public/badges/
   
 build:order_api:
   image: openjdk:8-jdk-alpine
@@ -71,7 +71,7 @@ build:order_api:
       - src/Server/services/order.api/**/*
   artifacts:
     paths:
-      - public/badges/**
+      - public/badges/
 
 build:identity_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -95,7 +95,7 @@ build:identity_api:
       - src/Server/services/identity.api/**/*
   artifacts:
     paths:
-      - public/badges/**
+      - public/badges/
 
 build:menu_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -119,7 +119,7 @@ build:menu_api:
       - src/Server/services/menu.api/**/*
   artifacts:
     paths:
-      - public/badges/**
+      - public/badges/
 
 pages:
   before_script: []
