gitlab.ci fixes
Former-commit-id: fdcac0bc0b821cbe71ead1cc2532f70dc0c50d62
Former-commit-id: fa1b71ca1899c4cf5c195d4f9f0596522cb942d3 [formerly 9af1d7a0af79a0327853f698512f3c11163d370c]
Former-commit-id: d547801d4c89c89965ad16abeaf0455f988446fb

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,8 @@ build:basket_api:
     changes:
       - src/Server/services/basket.api/**/*
   artifacts:
+    untracked: true
+    when: always
     paths:
       - public/badges/
   
@@ -70,6 +72,8 @@ build:order_api:
     changes:
       - src/Server/services/order.api/**/*
   artifacts:
+    untracked: true
+    when: always
     paths:
       - public/badges/
 
@@ -94,6 +98,8 @@ build:identity_api:
     changes:
       - src/Server/services/identity.api/**/*
   artifacts:
+    untracked: true
+    when: always
     paths:
       - public/badges/
 
@@ -118,6 +124,9 @@ build:menu_api:
     changes:
       - src/Server/services/menu.api/**/*
   artifacts:
+    untracked: true
+    when:
+      always
     paths:
       - public/badges/
 
