Go proxy configured
Former-commit-id: ad107689ad259416eafbf64c09fd6c4470c2fc51
Former-commit-id: e43b4d0f946820f933224986689006c48a8a33f1 [formerly 93a2480b7bbc4365ccbeb897eda42e30abfc43fd]
Former-commit-id: 66e8f348f4fa22337e5dbbcdfce152427c17d0cc

--- a/src/Server/services/basket.api/Dockerfile
+++ b/src/Server/services/basket.api/Dockerfile
@@ -5,6 +5,10 @@ RUN apk add --no-cache git
 
 WORKDIR /src
 COPY ./go.mod ./go.sum ./
+
+ENV GOPROXY=https://proxy.golang.org
+ENV GOSUMDB=sum.golang.org
+ENV GO111MODULE=on
 RUN go mod download
 
 COPY ./ ./
