gitlab ci issues
Former-commit-id: 8a2f43dbc59237cd67a838cc2eb5386bbe61bf9a
Former-commit-id: 9a32486690cdbc4c7742c6ee927154dcd56bcd7d [formerly cbdb4753e4425f8c5550962bf52d4aa2b9a80859]
Former-commit-id: f103fd48aa277efacc0871e9c032b2f681392af2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
   DOCKER_DRIVER: overlay2
   
 before_script:
-  - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - export GRADLE_USER_HOME=$(pwd)/.gradle
   - export NUGET_PACKAGES=$(pwd)/.nuget
   - export GOPATH=$(pwd)/go
