gitlab ci changes
Former-commit-id: 9618543e8af18f92821026503296acfa2bccd6b6
Former-commit-id: b1b13c13aca8b0fe17c51d1e3750fe83d19e4f53 [formerly b657741a904ed3ba3e87c9c3ec8a06c6691c9b23]
Former-commit-id: adc508d825421c3170769f9f0e11948217e39444

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ build:basket_api:
       - src/Server/services/basket.api/**/*
   
 build:order_api:
-  image: $IMAGE_BASE_NAME/openjdk:8-jdk-alpine
+  image: jurabek/openjdk:8-jdk-alpine
   stage: build & test
   script:
     - ci/update_build_badge.sh running order_api
@@ -60,7 +60,7 @@ build:order_api:
       - src/Server/services/order.api/**/*
 
 build:identity_api:
-  image: $IMAGE_BASE_NAME/dotnet-sdk:2.2-alpine
+  image: jurabek/dotnet-sdk:2.2-alpine
   stage: build & test
   script:
     - ci/update_build_badge.sh running identity_api
@@ -78,9 +78,9 @@ build:identity_api:
   only:
     changes:
       - src/Server/services/identity.api/**/*
-
+  
 build:menu_api:
-  image: $IMAGE_BASE_NAME/dotnet-sdk:2.2-alpine
+  image: jurabek/dotnet-sdk:2.2-alpine
   stage: build & test
   script:
     - ci/update_build_badge.sh running menu_api
