basket-api QA script added
Former-commit-id: df62d64d84dc59d040f3a4e4d859b4ad784b72ba
Former-commit-id: 0938d04d816e8d4d091f8df7a3d6be2a04e2926e [formerly 6048b5a2149e8c104deb90dd6f914ea86a0119a2]
Former-commit-id: c1c031218a4043945025427c713ab96dbcfb6e1a

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build:basket_api:
     - sh services/basket.api/install_ci_dependencies.sh
     - ci/update_build_badge.sh running basket_api
     - echo "failure" > basket_status.txt #https://gitlab.com/gitlab-org/gitlab-runner/issues/3088
+    - ci/qa.sh basket_api
     - ci/build.sh basket_api
     - echo "success" > basket_status.txt
   after_script:
