gitlab ci improvements
Former-commit-id: b9dc7f1a437fb6de55661d20812815ecc872489a
Former-commit-id: 7fec797eee478ca2d427152e3141aca813aa40c6 [formerly 16c0f70000bbe706f902885f3bbf09599acef845]
Former-commit-id: 6d718a5fae76afe77f0172e9f6705ff2684a2950

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ build:identity_api:
     key: dotnet-cache
     paths:
       - .nuget/
+    policy: pull
   only:
     changes:
       - src/Server/services/identity.api/**/*
@@ -96,6 +97,7 @@ build:menu_api:
     key: dotnet-cache
     paths:
       - .nuget/
+    policy: pull
   only:
     changes:
       - src/Server/services/menu.api/**/*
