--- a/src/Server/services/basket.api/sonar-project.properties
+++ b/src/Server/services/basket.api/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=restaurant-app
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/*_test.go,**/vendor/**, /reports/**, /docs/**
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
