dashboard app improments
Former-commit-id: dfb49a1eae6bca7e8b606e8235750edbeacb7dcb
Former-commit-id: 9e579ae7c23371cc08ffdccee37a0af463714b77 [formerly 6e060faca00cbeefa21004848892b4ed23e16f09]
Former-commit-id: e77e62499be8be6a61eebdebaa659b627f532b5b

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ Images/
 *.a
 src/Server/services/go/src/basket.api/main
 src/Server/services/go/pkg
+src/Server/web/web.admin/dashboard/package-lock.json
