Dashboard APP: Delete food functionality and k8s deployment added
Former-commit-id: 232c7b041011ce4837b414d9d838b8e2e1f6ead9
Former-commit-id: d54ce6aa5b93c6e38d81e0e2e7c7a30455a19957 [formerly 1b9bdbee6810349ecb9f4a4fe17c284f45b8d053]
Former-commit-id: f6ae12dd22930a5a021550baf6f2c89a3eb09698

--- a/src/Server/web/web.admin/dashboard/Dockerfile
+++ b/src/Server/web/web.admin/dashboard/Dockerfile
@@ -5,11 +5,13 @@ WORKDIR /usr/src/app
 COPY package*.json yarn.lock ./
 RUN yarn
 COPY . ./
-RUN yarn build
+RUN yarn build --prod
+
+#  --base-href=/dashboard/ --deploy-url=/dashboard/
+#--deploy-url /dashboard/
 
 # Stage 2
-FROM nginx:1.13.12-alpine
+FROM nginx:alpine
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/dist/dashboard /usr/share/nginx/html
 EXPOSE 80
-
