--- a/src/Server/web/web.admin/dashboard/nginx.conf
+++ b/src/Server/web/web.admin/dashboard/nginx.conf
@@ -1,8 +1,9 @@
 server {
   listen 80;
+  listen [::]:80;
+
   location / {
     root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html =404;
+    try_files $uri$args $uri$args/ /index.html =404;
   }
 }
