--- a/src/Server/k8s/pgsql-data.yml
+++ b/src/Server/k8s/pgsql-data.yml
@@ -14,7 +14,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: pgsql
+  name: pgsql-database
 spec:
   replicas: 1
   strategy:
