--- a/src/Server/services/menu.api/Menu.API/appsettings.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.json
@@ -1,5 +1,6 @@
 {
-    "ExternalIdentityUrl": "http://localhost:5100",
+    "IDENTITY_URL_PUB": "http://localhost:5100",
+    "OrchestrationType": "Local",
     "ConnectionStrings": {
         "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
     },
