--- a/src/Server/k8s/ingress.yml
+++ b/src/Server/k8s/ingress.yml
@@ -1,33 +1,39 @@
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  name: restaurant-ingress
   labels:
     app: frontend
-  name: restaurant-ingress
   annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"
+    # kubernetes.io/ingress.class: traefik
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "X-Forwarded-Prefix: $location_path";
+    # nginx.ingress.kubernetes.io/rewrite-target: /dashboard
 spec:
   rules:
-  - host:
-  - http:
-      paths:
-      - path: /menu
-        backend:
-          serviceName: menu-api
-          servicePort: 80
-      - path: /basket
-        backend:
-          serviceName: basket-api
-          servicePort: 80
-      - path: /identity
-        backend:
-          serviceName: identity-api
-          servicePort: 80
-      - path: /order
-        backend:
-          serviceName: order-api
-          servicePort: 80
+    - host: api.restaurant.com
+      http:
+        paths:
+          - path: /menu
+            backend:
+              serviceName: menu-api
+              servicePort: http
+          - path: /basket
+            backend:
+              serviceName: basket-api
+              servicePort: http
+          - path: /identity
+            backend:
+              serviceName: identity-api
+              servicePort: http
+          - path: /order
+            backend:
+              serviceName: order-api
+              servicePort: http
+    - host: dashboard.restaurant.com
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: dashboard-app
+            servicePort: http
