--- a/src/Server/k8s/redis-data.yml
+++ b/src/Server/k8s/redis-data.yml
@@ -25,7 +25,6 @@ metadata:
   name: redis-data
 spec:
   ports:
-  - port: 5432
-    targetPort: 5432
+  - port: 6379
   selector:
-    app: pgsql
+    app: basket-cache
