--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -2,7 +2,8 @@
     "MENU_API_URL": "http://localhost:5000",
     "BASKET_API_URL": "http://localhost:5050",
     "ORDER_API_URL": "http://localhost:8090",
-
+    "DASHBOARD_APP_URL": "http://localhost:4200",
+    "OrchestrationType": "Local",
     "ConnectionStrings": {
         "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
     },
